шрифты портфолио доделка

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
 
 body {
   background-color: #e5e5e5;
+  color: var(--primary-text-color);
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 .header {
@@ -15,6 +19,11 @@ body {
 
 .logo {
   color: var(--accent-hover-color);
+  font-family: Raleway, sans-serif;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .second-logo {
@@ -30,6 +39,11 @@ ul {
 
 .site-nav .link {
   color: var(--second-text-coor);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -44,6 +58,11 @@ ul {
 
 .contacts .link {
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .contacts .link:hover,
 .contacts .link:focus {
@@ -54,6 +73,12 @@ ul {
 
 .hero-title {
   color: var(--primery-white-color);
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 /* button */
@@ -62,6 +87,7 @@ ul {
   color: var(--primery-white-color);
   background-color: var(--accent-hover-color);
 }
+
 /* section */
 
 .section {
@@ -70,14 +96,24 @@ ul {
 
 .section-title {
   color: var(--second-text-coor);
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
-
 /* description */
+
 .description {
   color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
+
 .description .title {
   color: var(--second-text-coor);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
 }
 
 /* team */
@@ -85,19 +121,27 @@ ul {
 .team {
   color: var(--primary-text-color);
   background-color: #f5f4fa;
+  font-size: 16px;
+  line-height: 1.18;
 }
 
 .team .title {
   color: var(--second-text-coor);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
 }
 
 /* footer */
 
 .address .link-contacts {
   color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
+
 .address .link {
   color: var(--primery-white-color);
+  text-decoration: none;
 }
 
 /* основний колір тексту #757575 */
@@ -112,17 +156,27 @@ ul {
 /* колір фону #E5E5E5 */
 /* вторинний колір фону #F5F4FA */
 
+/* шрифти */
+/* Raleway 700, Roboto 400, 500, 700, 900 */
+
 /* сторінка портфоліо */
 
 /*кнопки портфолио*/
+
 .portfolio-button {
   color: var(--second-text-coor);
   background-color: #f5f4fa;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
 }
 
 .portfolio-button:hover,
 .portfolio-button:focus {
-  color: #2196f3;
+  color: var(--primery-white-color);
+  background-color: var(--accent-hover-color);
 }
 
 /* меню */
@@ -133,4 +187,8 @@ ul {
 }
 .services-title {
   color: var(--second-text-coor);
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
