--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ body {
 
 .header {
   background-color: var(--primery-white-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .logo {
@@ -84,8 +88,13 @@ ul {
 /* button */
 
 .button {
+  cursor: pointer;
   color: var(--primery-white-color);
   background-color: var(--accent-hover-color);
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
 /* section */
@@ -133,6 +142,10 @@ ul {
 }
 
 /* footer */
+.footer {
+  font-size: 14px;
+  line-height: 1.71;
+}
 
 .address .link-contacts {
   color: rgba(255, 255, 255, 0.6);
@@ -170,6 +183,7 @@ ul {
 /*кнопки портфолио*/
 
 .portfolio-button {
+  cursor: pointer;
   color: var(--second-text-coor);
   background-color: #f5f4fa;
   font-family: Roboto, sans-serif;
